--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,11 @@ server {
         proxy_set_header   X-Forwarded-Host $server_name;
     }
 
+    location /import-file/ {
+        root /;
+        autoindex on;
+    }
+
     location ~ ^/api-nebula/([A-Za-z0-9\/]+) {
         proxy_pass http://client:8080/api/$1;
     }
