fix: file download

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
         client_max_body_size 100M;
     }
 
-    location /import-file/ {
+    location /upload-path/ {
         root /;
         autoindex on;
     }
