--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
         client_max_body_size 100M;
     }
 
-    location /upload-path/ {
+    location /upload-dir/ {
         root /;
         autoindex on;
     }
