mod: upload to server (#42)
* mod: upload to server

* mod: http client max size

* fix: file download

* docs: fix

* mod: docker image name

Co-authored-by: NicolaCage <37568394+NicolaCage@users.noreply.github.com>

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # English: the WORKDING_DIR mapped in the docker
-# 中文: 这个是配置的 WORKING_DIR 将会映射到docker中的目录
-MAPPING_DOCKER_DIR=/import-file
+# 中文: 这个是配置的 UPLOAD_DIR 将会映射到docker中的目录
+MAPPING_DOCKER_DIR=/upload-dir
 # English: Set the directory to upload files. With this directory set, docker can access files on your local host. No extra space is allowed in the directory.
 # 中文：上传文件目录设置，以便容器内部能共享到本机的文件夹，拥有读写权限，目录不支持有空格
-WORKING_DIR=./example
+UPLOAD_DIR=./uploads
