--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,13 @@ services:
     image: vesoft/nebula-graph-studio:latest
     environment:
       USER: root
-      WORKING_DIR: ${MAPPING_DOCKER_DIR}
+      UPLOAD_DIR: ${MAPPING_DOCKER_DIR}
     ports:
       - 7001
     depends_on:
       - client
     volumes:
-      - ${WORKING_DIR}:${MAPPING_DOCKER_DIR}:rw
+      - ${UPLOAD_DIR}:${MAPPING_DOCKER_DIR}:rw
     networks:
       - nebula-web
   importer:
@@ -28,7 +28,7 @@ services:
     ports:
       - 5699
     volumes:
-      - ${WORKING_DIR}:${MAPPING_DOCKER_DIR}:rw
+      - ${UPLOAD_DIR}:${MAPPING_DOCKER_DIR}:rw
     command:
       - "--port=5699"
       - "--callback=http://nginx:7001/api/import/finish"
@@ -36,7 +36,7 @@ services:
     image: nginx:alpine
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/nebula.conf
-      - ${WORKING_DIR}:${MAPPING_DOCKER_DIR}:rw
+      - ${UPLOAD_DIR}:${MAPPING_DOCKER_DIR}:rw
     depends_on:
       - client
       - web
