--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,9 +10,10 @@ server {
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
+        client_max_body_size 100M;
     }
 
-    location /import-file/ {
+    location /upload-dir/ {
         root /;
         autoindex on;
     }
